Avoid horizontal scroll with very long string or link values
-   https://developer.mozilla.org/en-US/docs/Web/CSS/word-break

Alternative could be:

    overflow-wrap: break-word;

but the former ensures the value starts at the same line as the property
name, for example.

--- a/src/viewer.css
+++ b/src/viewer.css
@@ -187,3 +187,7 @@ h1 {
   display: inline-block;
   width: 0px;
 }
+
+.string, :any-link {
+  word-break: break-all;
+}
